Fix height 100% on safari

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -118,12 +118,6 @@ h1 {
     color: $gold;
 }
 
-body {
-    display: flex;
-    min-height: 100%;
-    flex-direction: column;
-}
-
 .hidden {
     display: none;
 }
